# Soter

./: package-lock.json  pnpm-lock.yaml  pr_body.md
app/ai-service/: Dockerfile  (+16 more)
app/onchain/contracts/aid_escrow/: Cargo.toml
app/onchain/contracts/aid_escrow/src/: lib.rs
app/onchain/contracts/aid_escrow/test_snapshots/: test_aggregates_all_claimed.1.json  test_aggregates_disburse_counts_as_claimed.1.json  test_aggregates_filters_by_token.1.json  test_aggregates_many_packages.1.json  test_aggregates_mixed_statuses.1.json  test_aggregates_revoke_then_refund.1.json  test_aggregates_single_created_package.1.json  test_aggregates_unknown_token.1.json  test_aggregates_update_after_transitions.1.json  test_batch_create_packages_empty_arrays.1.json  test_batch_create_packages_insufficient_funds.1.json  test_batch_create_packages_mismatched_arrays.1.json  test_batch_create_packages_success.1.json  test_batch_then_individual_no_id_collision.1.json  test_cancel_package_flow.1.json  test_config_constraints_on_extend_expiration.1.json  test_contract_initialized_event.1.json  test_core_flow_fund_create_claim.1.json  test_distributor_package_creation.1.json  test_error_cases.1.json  test_event_topics_include_package_id.1.json  test_expiry_and_refund.1.json  test_extend_expiration_cancelled_package.1.json  test_extend_expiration_claimed_package.1.json  test_extend_expiration_expired_package.1.json  test_extend_expiration_multiple_extends.1.json  test_extend_expiration_success.1.json  test_extend_expiration_unbounded_package.1.json  test_extend_expiration_zero_additional_time.1.json  (+18 more)
(+193 files in other folders)
